📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -20606,5 +20606,149 @@
         "published": "Thu, 18 Dec 2025 18:14:48 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46316367\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/18/pickle-robot-adds-tesla-veteran-as-first-cfo/",
+        "title": "Pickle Robot adds Tesla veteran as\u00a0first\u00a0CFO",
+        "link": "https://techcrunch.com/2025/12/18/pickle-robot-adds-tesla-veteran-as-first-cfo/",
+        "published": "Thu, 18 Dec 2025 20:01:46 +0000",
+        "source": "TechCrunch",
+        "summary": "Jeff Evanson recently joined Pickle Robot as the company's first CFO as the startup has allegedly expanded its partnership with UPS."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/18/why-british-politicians-are-flocking-to-american-tech-giants/",
+        "title": "Why British politicians are flocking to American tech giants",
+        "link": "https://techcrunch.com/2025/12/18/why-british-politicians-are-flocking-to-american-tech-giants/",
+        "published": "Thu, 18 Dec 2025 19:50:23 +0000",
+        "source": "TechCrunch",
+        "summary": "Former British Chancellor of the Exchequer George Osborne has joined OpenAI as managing director and head of OpenAI for Countries. He will run also Coinbase's internal advisory council."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/18/chatgpts-mobile-app-hits-new-milestone-of-3b-in-consumer-spending/",
+        "title": "ChatGPT\u2019s mobile app hits new milestone of $3B in consumer spending",
+        "link": "https://techcrunch.com/2025/12/18/chatgpts-mobile-app-hits-new-milestone-of-3b-in-consumer-spending/",
+        "published": "Thu, 18 Dec 2025 19:50:02 +0000",
+        "source": "TechCrunch",
+        "summary": "ChatGPT has reached $3B in lifetime mobile consumer spending in just 31 months, faster than TikTok and major streaming apps."
+    },
+    {
+        "id": "https://www.wired.com/story/last-minute-christmas-kindle-sales/",
+        "title": "Don't Miss This Kindle Sale: Paperwhite, Colorsoft, and Accessories",
+        "link": "https://www.wired.com/story/last-minute-christmas-kindle-sales/",
+        "published": "Thu, 18 Dec 2025 19:40:33 +0000",
+        "source": "WIRED",
+        "summary": "If your favorite reader is the one left on your Christmas list, good news: Several Kindles and Kindle accessories are on sale right now for your last-minute shopping."
+    },
+    {
+        "id": "https://www.wired.com/story/ice-seeks-cyber-upgrade-to-better-surveil-and-investigate-its-employees/",
+        "title": "ICE Seeks Cyber Upgrade to Better Surveil and Investigate Its Employees",
+        "link": "https://www.wired.com/story/ice-seeks-cyber-upgrade-to-better-surveil-and-investigate-its-employees/",
+        "published": "Thu, 18 Dec 2025 19:14:50 +0000",
+        "source": "WIRED",
+        "summary": "The agency plans to renew a sweeping cybersecurity contract that includes expanded employee monitoring as the government escalates leak investigations and casts internal dissent as a threat."
+    },
+    {
+        "id": "https://arstechnica.com/culture/2025/12/neuraldsp-models-john-mayers-entire-amp-and-effects-rig-and-it-sounds-great/",
+        "title": "NeuralDSP models John Mayer\u2019s entire amp and effects rig\u2014and it sounds great",
+        "link": "https://arstechnica.com/culture/2025/12/neuraldsp-models-john-mayers-entire-amp-and-effects-rig-and-it-sounds-great/",
+        "published": "Thu, 18 Dec 2025 19:27:24 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Mayer gets the \"Archetype\" treatment."
+    },
+    {
+        "id": "https://arstechnica.com/space/2025/12/nasa-will-soon-find-out-if-the-perseverance-rover-can-really-persevere-on-mars/",
+        "title": "NASA will soon find out if the Perseverance rover can really persevere on Mars",
+        "link": "https://arstechnica.com/space/2025/12/nasa-will-soon-find-out-if-the-perseverance-rover-can-really-persevere-on-mars/",
+        "published": "Thu, 18 Dec 2025 18:12:18 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Engineers at JPL are certifying the Perseverance rover to drive up to 100 kilometers."
+    },
+    {
+        "id": "https://arstechnica.com/shopping/2025/12/for-the-lazy-techie-these-are-ars-staffs-last-minute-holiday-gift-picks/",
+        "title": "For the lazy techie: These are Ars staff\u2019s last-minute holiday gift picks",
+        "link": "https://arstechnica.com/shopping/2025/12/for-the-lazy-techie-these-are-ars-staffs-last-minute-holiday-gift-picks/",
+        "published": "Thu, 18 Dec 2025 17:55:22 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Two wireless mice, two external hard drives, and a partridge in a pear tree."
+    },
+    {
+        "id": "https://www.engadget.com/transportation/auto-chip-shortage-honda-will-pause-production-in-japan-and-china-200857591.html?src=rss",
+        "title": "Auto chip shortage: Honda will pause production in Japan and China",
+        "link": "https://www.engadget.com/transportation/auto-chip-shortage-honda-will-pause-production-in-japan-and-china-200857591.html?src=rss",
+        "published": "Thu, 18 Dec 2025 20:08:57 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>The ripples of the auto industry's chip shortage are still being felt, as evidenced by Honda. <em>Bloomberg</em> <a class=\"link\" href=\"https://www.bloomberg.com/news/articles/2025-12-18/chip-shortage-lingers-as-honda-to-halt-output-in-japan-china\" target=\"_blank\">reported</a> on Wednesday that the automaker will suspend production in Japan on January 5 and 6. (Honda didn't specify the affected factories.) In addition, all three of the automaker's Guangqi Honda Automobile plants in China will "
+    },
+    {
+        "id": "https://www.engadget.com/home/home-theater/the-displace-hub-can-make-your-normal-tv-wireless-193837460.html?src=rss",
+        "title": "The Displace Hub can make your normal TV wireless",
+        "link": "https://www.engadget.com/home/home-theater/the-displace-hub-can-make-your-normal-tv-wireless-193837460.html?src=rss",
+        "published": "Thu, 18 Dec 2025 19:38:37 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Displace first tried its hand at reimagining the TV in 2023, with <a class=\"link\" href=\"https://www.engadget.com/displace-wireless-tv-hands-on-002620453.html\" target=\"_blank\">a wireless screen</a> that suctions onto walls and features built-in rechargeable batteries. At CES 2026, the company is not only introducing new versions of its own TVs, it's also showing off the <a class=\"link\" href=\"https://www.prnewswire.com/news-releases/displace-redefines-wall-mounts-at-ces-2026-with-displace-hub-t"
+    },
+    {
+        "id": "https://www.engadget.com/apps/apple-is-bringing-even-more-ads-to-the-app-store-193416921.html?src=rss",
+        "title": "Apple is bringing even more ads to the App Store",
+        "link": "https://www.engadget.com/apps/apple-is-bringing-even-more-ads-to-the-app-store-193416921.html?src=rss",
+        "published": "Thu, 18 Dec 2025 19:34:16 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Apple just announced <a href=\"https://ads.apple.com/app-store/help/ad-placements/0082-search-results#ntf\"><ins>it will be integrating more ads</ins></a> into the App Store because our poor eyeballs must be assaulted at all times. The company plans on littering search results with advertisements <a href=\"https://9to5mac.com/2025/12/17/apple-announces-more-ads-are-coming-to-app-store-search-results/\"><ins>beginning next year</ins></a>.</p>\n<p>Currently, the App Store only has one ad spot. That'"
+    },
+    {
+        "id": "https://www.engadget.com/mobile/smartphones/trump-mobiles-t1-still-doesnt-exist-but-the-company-is-now-selling-refurbished-phones-191740570.html?src=rss",
+        "title": "Trump Mobile's T1 still doesn't exist, but the company is now selling refurbished phones",
+        "link": "https://www.engadget.com/mobile/smartphones/trump-mobiles-t1-still-doesnt-exist-but-the-company-is-now-selling-refurbished-phones-191740570.html?src=rss",
+        "published": "Thu, 18 Dec 2025 19:17:40 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>The T1 smartphone from Trump Mobile remains <a class=\"link\" href=\"https://www.engadget.com/mobile/smartphones/trump-mobile-is-promoting-its-smartphone-with-terribly-edited-photos-of-other-brands-products-222940375.html\" target=\"_blank\">non-existent vaporware</a>, but the company is still finding new ways to take people's money. Anyone who desperately wants to fund this sham can now buy a refurbished phone from the company. The business's website has listings for &quot;Renewed&quot; models of "
+    },
+    {
+        "id": "https://gizmodo.com/new-odyssey-poster-christopher-nolan-greek-armor-2000701416",
+        "title": "The New \u2018Odyssey\u2019 Poster Throws a Bone to All Those Armor Complaints",
+        "link": "https://gizmodo.com/new-odyssey-poster-christopher-nolan-greek-armor-2000701416",
+        "published": "Thu, 18 Dec 2025 19:40:45 +0000",
+        "source": "Gizmodo",
+        "summary": "And we mean that literally. Christopher Nolan directs the 2026 epic starring Matt Damon and Tom Holland."
+    },
+    {
+        "id": "https://gizmodo.com/propublicas-new-tool-provides-drug-info-the-fda-wont-2000701357",
+        "title": "ProPublica\u2019s New Tool Provides Drug Info the FDA Won\u2019t",
+        "link": "https://gizmodo.com/propublicas-new-tool-provides-drug-info-the-fda-wont-2000701357",
+        "published": "Thu, 18 Dec 2025 19:40:40 +0000",
+        "source": "Gizmodo",
+        "summary": "The first-of-its-kind app to help you find out where your generic drugs come from and see the track records of the factories that made them."
+    },
+    {
+        "id": "https://gizmodo.com/how-are-u-s-dams-holding-up-new-satellite-data-warns-of-trouble-2000701259",
+        "title": "How Are U.S. Dams Holding Up? New Satellite Data Warns of Trouble",
+        "link": "https://gizmodo.com/how-are-u-s-dams-holding-up-new-satellite-data-warns-of-trouble-2000701259",
+        "published": "Thu, 18 Dec 2025 19:30:34 +0000",
+        "source": "Gizmodo",
+        "summary": "There's never been a giant dam failure in the US modern era, and a team of researchers is looking to keep it that way."
+    },
+    {
+        "id": "https://mashable.com/article/chatgpt-teen-safety-first-principles",
+        "title": "OpenAI vows to put teen safety first on ChatGPT",
+        "link": "https://mashable.com/article/chatgpt-teen-safety-first-principles",
+        "published": "Thu, 18 Dec 2025 19:00:22 +0000",
+        "source": "Mashable",
+        "summary": "New update aims to provide a safe experience for teens between the ages of 13 and 17."
+    },
+    {
+        "id": "https://mashable.com/article/ios-26-3-beta-features-how-to-download",
+        "title": "iOS 26.3 beta arrives: How to download it and 3 new features to try",
+        "link": "https://mashable.com/article/ios-26-3-beta-features-how-to-download",
+        "published": "Thu, 18 Dec 2025 18:59:51 +0000",
+        "source": "Mashable",
+        "summary": "The public beta for iOS 26.3 is here, bringing with it a few interesting new features."
+    },
+    {
+        "id": "https://gist.github.com/hackermondev/5e2cdc32849405fff6b46957747a2d28",
+        "title": "We pwned X, Vercel, Cursor, and Discord through a supply-chain attack",
+        "link": "https://gist.github.com/hackermondev/5e2cdc32849405fff6b46957747a2d28",
+        "published": "Thu, 18 Dec 2025 19:08:48 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46317098\">Comments</a>"
     }
 ]
