📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -20830,5 +20830,125 @@
         "published": "Thu, 18 Dec 2025 20:46:10 +0000",
         "source": "Mashable",
         "summary": "A software update lets glasses wearers amplify the voice of someone they're trying to hear."
+    },
+    {
+        "id": "https://www.theverge.com/news/847780/openai-anthropic-teen-safety-chatgpt-claude",
+        "title": "OpenAI and Anthropic will start predicting when users are underage",
+        "link": "https://www.theverge.com/news/847780/openai-anthropic-teen-safety-chatgpt-claude",
+        "published": "2025-12-18T16:55:59-05:00",
+        "source": "The Verge",
+        "summary": "OpenAI and Anthropic are making tweaks to their chatbots that they say will make them safer for teens. As OpenAI has updated its guidelines on how ChatGPT should interact with users between the ages of 13 and 17, Anthropic is working on a new way to identify if someone might be underage. On Thursday, OpenAI [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/847739/instagram-hashtag-spam-limit",
+        "title": "Instagram wants to limit hashtag spam",
+        "link": "https://www.theverge.com/news/847739/instagram-hashtag-spam-limit",
+        "published": "2025-12-18T16:16:33-05:00",
+        "source": "The Verge",
+        "summary": "If you're tired of seeing Instagram posts with a seemingly endless list of hashtags, Instagram is making a change to stop that. In a post today, Instagram chief Adam Mosseri said that the platform will now cap hashtags to five per post. \"While I know it can be tempting to use more, a few specific [&#8230;]"
+    },
+    {
+        "id": "https://arstechnica.com/tech-policy/2025/12/florida-schools-plan-to-vastly-expand-use-of-ai-that-mistook-clarinet-for-gun/",
+        "title": "School security AI flagged clarinet as a gun. Exec says it wasn\u2019t an error.",
+        "link": "https://arstechnica.com/tech-policy/2025/12/florida-schools-plan-to-vastly-expand-use-of-ai-that-mistook-clarinet-for-gun/",
+        "published": "Thu, 18 Dec 2025 21:04:35 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Human review didn't stop AI from triggering lockdown at panicked middle school."
+    },
+    {
+        "id": "https://arstechnica.com/science/2025/12/llms-impact-on-science-booming-publications-stagnating-quality/",
+        "title": "LLMs\u2019 impact on science: Booming publications, stagnating quality",
+        "link": "https://arstechnica.com/science/2025/12/llms-impact-on-science-booming-publications-stagnating-quality/",
+        "published": "Thu, 18 Dec 2025 20:54:36 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Once researchers turn to LLMs, paper counts go up, quality does not."
+    },
+    {
+        "id": "https://www.engadget.com/ai/lg-will-let-you-delete-the-previously-unremovable-microsoft-copilot-shortcut-on-its-smart-tvs-215352944.html?src=rss",
+        "title": "LG will let you delete the previously unremovable Microsoft Copilot shortcut on its smart TVs",
+        "link": "https://www.engadget.com/ai/lg-will-let-you-delete-the-previously-unremovable-microsoft-copilot-shortcut-on-its-smart-tvs-215352944.html?src=rss",
+        "published": "Thu, 18 Dec 2025 21:53:52 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Several LG smart TV owners, including some <em>Engadget</em> staff, were surprised to find what looked like <a class=\"no-affiliate-link\" href=\"https://www.engadget.com/ai/lg-quietly-added-an-unremovable-microsoft-copilot-app-to-tvs-235923754.html\"><ins>an unremovable Microsoft Copilot app</ins></a> suddenly installed on their devices earlier this week. After all the raised eyebrows, a representative from LG has reached out to say that the company &quot;will take steps to allow users to delete"
+    },
+    {
+        "id": "https://gizmodo.com/nasa-has-a-new-chief-heres-what-he-could-do-in-his-first-20-days-2000701547",
+        "title": "NASA Has a New Chief. Here\u2019s What He Could Do in His First 20 Days",
+        "link": "https://gizmodo.com/nasa-has-a-new-chief-heres-what-he-could-do-in-his-first-20-days-2000701547",
+        "published": "Thu, 18 Dec 2025 21:35:21 +0000",
+        "source": "Gizmodo",
+        "summary": "Newly minted NASA administrator Jared Isaacman has expressed a desire to shake things up at NASA. It appears he\u2019ll hit the ground running."
+    },
+    {
+        "id": "https://gizmodo.com/openai-is-going-into-the-new-year-with-some-real-loser-energy-2000701439",
+        "title": "OpenAI Is Going Into the New Year With Some Real Loser Energy",
+        "link": "https://gizmodo.com/openai-is-going-into-the-new-year-with-some-real-loser-energy-2000701439",
+        "published": "Thu, 18 Dec 2025 21:35:09 +0000",
+        "source": "Gizmodo",
+        "summary": "The slop machine giveth, and the slop machine taketh away."
+    },
+    {
+        "id": "https://gizmodo.com/hugh-jackmans-new-movie-has-a-bunch-of-talking-sheep-solve-his-murder-2000701407",
+        "title": "Hugh Jackman\u2019s New Movie Has a Bunch of Talking Sheep Solve His Murder",
+        "link": "https://gizmodo.com/hugh-jackmans-new-movie-has-a-bunch-of-talking-sheep-solve-his-murder-2000701407",
+        "published": "Thu, 18 Dec 2025 21:30:00 +0000",
+        "source": "Gizmodo",
+        "summary": "What the flock is even happening in 'The Sheep Detectives'?"
+    },
+    {
+        "id": "https://gizmodo.com/kia-and-hyundia-could-pay-over-500-million-to-settle-viral-kia-boys-thefts-2000701494",
+        "title": "Kia and Hyundia Could Pay Over $500 Million to Settle Viral \u2018Kia Boys\u2019 Thefts",
+        "link": "https://gizmodo.com/kia-and-hyundia-could-pay-over-500-million-to-settle-viral-kia-boys-thefts-2000701494",
+        "published": "Thu, 18 Dec 2025 21:20:20 +0000",
+        "source": "Gizmodo",
+        "summary": "The automakers reached a multistate settlement after a social media trend exposed missing anti-theft protections in some of their cars."
+    },
+    {
+        "id": "https://mashable.com/article/chatgpt-apps-beta-apps-to-try",
+        "title": "ChatGPT launches Apps beta: 8 big apps you can now use in ChatGPT",
+        "link": "https://mashable.com/article/chatgpt-apps-beta-apps-to-try",
+        "published": "Thu, 18 Dec 2025 21:14:57 +0000",
+        "source": "Mashable",
+        "summary": "ChatGPT Apps gives you the chance to integrate your favorite apps right into the AI chatbot."
+    },
+    {
+        "id": "https://www.zdnet.com/article/how-to-rotate-pc-monitor/",
+        "title": "This simple monitor trick improved my productivity tenfold - and it's free to do",
+        "link": "https://www.zdnet.com/article/how-to-rotate-pc-monitor/",
+        "published": "Thu, 18 Dec 2025 22:06:00 GMT",
+        "source": "Latest news",
+        "summary": "Vertical monitors can streamline workflows in certain situations. Here's how to set one up in Windows 11 using built-in and third-party tools."
+    },
+    {
+        "id": "https://www.zdnet.com/article/freebsd-will-challenge-your-skills-and-make-you-learn-along-the-way/",
+        "title": "I've used Linux for decades, but I'd switch to FreeBSD for this one feature",
+        "link": "https://www.zdnet.com/article/freebsd-will-challenge-your-skills-and-make-you-learn-along-the-way/",
+        "published": "Thu, 18 Dec 2025 21:27:57 GMT",
+        "source": "Latest news",
+        "summary": "FreeBSD isn't Linux, but if you didn't know any better, you'd swear it was."
+    },
+    {
+        "id": "https://www.zdnet.com/article/battery-comparison-samsung-google-oneplus/",
+        "title": "I ran a battery test between the best Samsung, Google, and OnePlus phones - here's the surprise winner",
+        "link": "https://www.zdnet.com/article/battery-comparison-samsung-google-oneplus/",
+        "published": "Thu, 18 Dec 2025 21:26:21 GMT",
+        "source": "Latest news",
+        "summary": "Among the year's best Android phones, here's the one that lasted the longest in our endurance tests."
+    },
+    {
+        "id": "https://www.zdnet.com/article/best-oneplus-settings-better-performance/",
+        "title": "I changed 10 settings on my OnePlus that made the phone run blazing fast",
+        "link": "https://www.zdnet.com/article/best-oneplus-settings-better-performance/",
+        "published": "Thu, 18 Dec 2025 21:20:00 GMT",
+        "source": "Latest news",
+        "summary": "Are you making the most out of your OnePlus phone? Adjust these settings to unlock better performance and faster speeds."
+    },
+    {
+        "id": "https://www.technologyreview.com/2025/12/18/1130148/china-ev-battery-recycle/",
+        "title": "China figured out how to sell EVs. Now it has to bury their batteries.",
+        "link": "https://www.technologyreview.com/2025/12/18/1130148/china-ev-battery-recycle/",
+        "published": "Thu, 18 Dec 2025 21:24:58 +0000",
+        "source": "MIT Technology Review",
+        "summary": "In August 2025, Wang Lei decided it was finally time to say goodbye to his electric vehicle. Wang, who is 39, had bought the car in 2016, when EVs still felt experimental in Beijing. It was a compact Chinese brand. The subsidies were good, and the salesman talked about \u201csupporting domestic innovation.\u201d At the time,&#8230;"
     }
 ]
