📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -20950,5 +20950,101 @@
         "published": "Thu, 18 Dec 2025 21:24:58 +0000",
         "source": "MIT Technology Review",
         "summary": "In August 2025, Wang Lei decided it was finally time to say goodbye to his electric vehicle. Wang, who is 39, had bought the car in 2016, when EVs still felt experimental in Beijing. It was a compact Chinese brand. The subsidies were good, and the salesman talked about \u201csupporting domestic innovation.\u201d At the time,&#8230;"
+    },
+    {
+        "id": "https://www.theverge.com/column/847806/head-of-threads-interview",
+        "title": "Threads wants to be the app you can\u2019t wait to open in the morning",
+        "link": "https://www.theverge.com/column/847806/head-of-threads-interview",
+        "published": "2025-12-18T17:30:00-05:00",
+        "source": "The Verge",
+        "summary": "This is an excerpt of Sources by Alex Heath, a newsletter about AI and the tech industry, syndicated just for The Verge subscribers once a week. By all measures, Meta's Threads app had a very good year. The app was Apple's second-most-downloaded iOS app of the year, trailing only ChatGPT. Threads now has 400 million [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/gadgets/847777/oh-snap-i-have-a-new-favorite-phone-grip",
+        "title": "Oh snap, I have a new favorite phone grip",
+        "link": "https://www.theverge.com/gadgets/847777/oh-snap-i-have-a-new-favorite-phone-grip",
+        "published": "2025-12-18T17:29:23-05:00",
+        "source": "The Verge",
+        "summary": "In 2022, we called a simple magnetic ring from Anker the best MagSafe phone grip, but things have evolved dramatically since then! You can buy two or even three magnetic rings joined at the hip these days to wield your iPhone, recent Pixel, or really any phone if you stick a magnetic case or included [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/gadgets/846242/best-steam-winter-sale-game-deals",
+        "title": "Steam\u2019s annual winter sale is here \u2014 these are the best games to get",
+        "link": "https://www.theverge.com/gadgets/846242/best-steam-winter-sale-game-deals",
+        "published": "2025-12-18T17:15:00-05:00",
+        "source": "The Verge",
+        "summary": "If you\u2019re lucky enough to have a bit of time off around the holidays, we have great news: Steam\u2019s annual winter sale kicked off today, and will run through Monday, January 5th at 1PM ET. Now\u2019s a great time to stock up on some of the best games of 2025 at a solid discount, or [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/house-oversight-jeffrey-epstein-photos-december-18-2025/",
+        "title": "Terrifying New Photos Emerge From the Jeffrey Epstein Estate",
+        "link": "https://www.wired.com/story/house-oversight-jeffrey-epstein-photos-december-18-2025/",
+        "published": "Thu, 18 Dec 2025 22:23:31 +0000",
+        "source": "WIRED",
+        "summary": "The latest photo dump from Democrats in the House Oversight Committee includes more famous men and upsetting Lolita quotes written on a woman's body."
+    },
+    {
+        "id": "https://www.wired.com/story/best-apple-tv-plus-movies/",
+        "title": "The 28 Best Movies on Apple TV, WIRED\u2019s Picks (December 2025)",
+        "link": "https://www.wired.com/story/best-apple-tv-plus-movies/",
+        "published": "Thu, 18 Dec 2025 20:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Come See Me in the Good Light, Highest 2 Lowest, and F1: The Movie are just a few of the movies you should be watching on Apple TV this month."
+    },
+    {
+        "id": "https://arstechnica.com/gaming/2025/12/reminder-donate-to-win-swag-in-our-annual-charity-drive-sweepstakes-18/",
+        "title": "Reminder: Donate to win swag in our annual Charity Drive sweepstakes",
+        "link": "https://arstechnica.com/gaming/2025/12/reminder-donate-to-win-swag-in-our-annual-charity-drive-sweepstakes-18/",
+        "published": "Thu, 18 Dec 2025 21:35:58 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Help increase our charity haul of nearly $18,000 in just over a week."
+    },
+    {
+        "id": "https://arstechnica.com/gadgets/2025/12/for-just-a-couple-of-months-in-the-middle-of-2025-it-was-an-ok-time-to-build-a-pc/",
+        "title": "RAM and SSD prices are still climbing\u2014here\u2019s our best advice for PC builders",
+        "link": "https://arstechnica.com/gadgets/2025/12/for-just-a-couple-of-months-in-the-middle-of-2025-it-was-an-ok-time-to-build-a-pc/",
+        "published": "Thu, 18 Dec 2025 21:31:03 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "I would avoid building a PC right now, but if you can't, here's our best advice."
+    },
+    {
+        "id": "https://www.engadget.com/ai/googles-notebooklm-introduces-data-tables-feature-225548565.html?src=rss",
+        "title": "Google\u2019s NotebookLM introduces Data Tables feature",
+        "link": "https://www.engadget.com/ai/googles-notebooklm-introduces-data-tables-feature-225548565.html?src=rss",
+        "published": "Thu, 18 Dec 2025 22:55:48 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Google's latest addition to its NotebookLM artificial intelligence research platform is a feature called <a class=\"link\" href=\"https://blog.google/technology/google-labs/notebooklm-data-tables/\" target=\"_blank\">Data Tables</a>. The tool can collect and synthesize information across multiple sources into a chart that can be exported to Google Sheets. All Pro and Ultra users will have access to the feature today, and Data Tables will roll out to all users over the coming weeks.</p><p>In practic"
+    },
+    {
+        "id": "https://gizmodo.com/the-new-bluey-game-celebrates-a-story-anyone-can-play-with-2000701020",
+        "title": "The New \u2018Bluey\u2019 Game Celebrates a Story Anyone Can Play With",
+        "link": "https://gizmodo.com/the-new-bluey-game-celebrates-a-story-anyone-can-play-with-2000701020",
+        "published": "Thu, 18 Dec 2025 22:41:22 +0000",
+        "source": "Gizmodo",
+        "summary": "'Quest for the Gold Pen' leverages a beloved 'Bluey' premise to help embrace your inner child."
+    },
+    {
+        "id": "https://gizmodo.com/microsofts-push-for-copilot-plus-pcs-could-stall-laptop-sales-2000701505",
+        "title": "Oh, the Irony: Microsoft\u2019s Push for Copilot+ PCs Could Stall Laptop Sales",
+        "link": "https://gizmodo.com/microsofts-push-for-copilot-plus-pcs-could-stall-laptop-sales-2000701505",
+        "published": "Thu, 18 Dec 2025 22:18:19 +0000",
+        "source": "Gizmodo",
+        "summary": "Windows users can't go back to 8GB of RAM, but laptop makers may not have a choice."
+    },
+    {
+        "id": "https://mashable.com/article/barack-obama-best-of-2025-list-internet-reactions-movie-music-books",
+        "title": "Barack Obama just dropped his 2025 Best Of list. The internet has thoughts.",
+        "link": "https://mashable.com/article/barack-obama-best-of-2025-list-internet-reactions-movie-music-books",
+        "published": "Thu, 18 Dec 2025 22:29:32 +0000",
+        "source": "Mashable",
+        "summary": "Barack Obama dropped his annual 'Best Of' lists across film, books, and music, and the internet reacted to his picks."
+    },
+    {
+        "id": "https://www.japantimes.co.jp/business/2025/12/18/tech/china-west-ai-chips/",
+        "title": "How China built its \u2018Manhattan Project\u2019 to rival the West in AI chips",
+        "link": "https://www.japantimes.co.jp/business/2025/12/18/tech/china-west-ai-chips/",
+        "published": "Thu, 18 Dec 2025 18:55:34 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46316907\">Comments</a>"
     }
 ]
