--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -21046,5 +21046,141 @@
         "published": "Thu, 18 Dec 2025 18:55:34 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46316907\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/18/apple-becomes-a-debt-collector-with-its-new-developer-agreement/",
+        "title": "Apple becomes a debt collector with its new developer agreement",
+        "link": "https://techcrunch.com/2025/12/18/apple-becomes-a-debt-collector-with-its-new-developer-agreement/",
+        "published": "Thu, 18 Dec 2025 23:56:19 +0000",
+        "source": "TechCrunch",
+        "summary": "Apple says it can now collect any money a developer owes the tech giant at any time."
+    },
+    {
+        "id": "https://www.theverge.com/news/847858/tiktok-sale-deal-memo-january-close",
+        "title": "The TikTok US sale is finally happening",
+        "link": "https://www.theverge.com/news/847858/tiktok-sale-deal-memo-january-close",
+        "published": "2025-12-18T18:18:34-05:00",
+        "source": "The Verge",
+        "summary": "TikTok has finalized the deal to sell its US business, according to reports from Axios, The Hollywood Reporter, and CNBC. They report that a memo from TikTok CEO Shou Zi Chew to employees on Thursday said the deal will close on January 22nd, with Oracle, Silver Lake, and Abu Dhabi's MGX owning 45 percent of [&#8230;]"
+    },
+    {
+        "id": "https://arstechnica.com/space/2025/12/trump-commits-to-moon-landing-by-2028-followed-by-a-lunar-outpost-two-years-later/",
+        "title": "Trump commits to Moon landing by 2028, followed by a lunar outpost two years later",
+        "link": "https://arstechnica.com/space/2025/12/trump-commits-to-moon-landing-by-2028-followed-by-a-lunar-outpost-two-years-later/",
+        "published": "Thu, 18 Dec 2025 23:05:42 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Also, the Trump administration wants to put some nuclear power reactors there, too."
+    },
+    {
+        "id": "https://arstechnica.com/google/2025/12/youtube-bans-two-popular-channels-that-created-fake-ai-movie-trailers/",
+        "title": "YouTube bans two popular channels that created fake AI movie trailers",
+        "link": "https://arstechnica.com/google/2025/12/youtube-bans-two-popular-channels-that-created-fake-ai-movie-trailers/",
+        "published": "Thu, 18 Dec 2025 22:39:54 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Google loves AI content, except when it doesn't."
+    },
+    {
+        "id": "https://arstechnica.com/gadgets/2025/12/peacock-showing-ads-upon-launch-opens-the-door-for-more-disruptive-streaming-ads/",
+        "title": "Peacock showing ads upon launch opens the door for more disruptive streaming ads",
+        "link": "https://arstechnica.com/gadgets/2025/12/peacock-showing-ads-upon-launch-opens-the-door-for-more-disruptive-streaming-ads/",
+        "published": "Thu, 18 Dec 2025 22:18:21 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Subscribers will start seeing ads when selecting a user next year."
+    },
+    {
+        "id": "https://www.engadget.com/social-media/trumps-tiktok-deal-is-another-step-closer-to-finally-actually-happening-001813404.html?src=rss",
+        "title": "Trump's TikTok deal is another step closer to finally actually happening",
+        "link": "https://www.engadget.com/social-media/trumps-tiktok-deal-is-another-step-closer-to-finally-actually-happening-001813404.html?src=rss",
+        "published": "Fri, 19 Dec 2025 00:18:13 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Remember back in September when President Donald Trump signed an <a class=\"link\" href=\"https://www.engadget.com/social-media/trump-signs-executive-order-saying-his-tiktok-deal-is-legal-204607521.html\" target=\"_blank\">executive order</a> that seemingly finalized some of the terms of a deal to spin off TikTok's US business? Three months later, that same deal is apparently one step closer to being official.</p><p>According to <a class=\"link\" href=\"https://www.bloomberg.com/news/articles/2025-12-"
+    },
+    {
+        "id": "https://www.engadget.com/gaming/pc/steam-winter-sale-discounts-clair-obscur-silent-hill-f-and-more-230834279.html?src=rss",
+        "title": "Steam Winter Sale discounts Clair Obscur, Silent Hill f and more",
+        "link": "https://www.engadget.com/gaming/pc/steam-winter-sale-discounts-clair-obscur-silent-hill-f-and-more-230834279.html?src=rss",
+        "published": "Thu, 18 Dec 2025 23:08:34 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Holiday shopping is in full swing, which means it's about time for the <a class=\"link\" href=\"https://store.steampowered.com/news/app/593110/view/492711197218440447?l=english\" target=\"_blank\">Steam Winter Sale</a>. This go-around, Valve\u2019s sale runs from December 18, 2025 through January 5, 2026, and includes discounts on some of this year's hit games, like <a class=\"link\" href=\"https://www.engadget.com/gaming/clair-obscur-expedition-33-review-an-original-hit-rpg-090012488.html\" target=\"_blank\""
+    },
+    {
+        "id": "https://gizmodo.com/rai-rai-rai-is-a-pastiche-of-manga-greats-rolled-into-a-cutesy-kaiju-package-2000701470",
+        "title": "\u2018Rai Rai Rai\u2019 Is a Pastiche of Manga Greats Rolled Into a Cutesy Kaiju Package",
+        "link": "https://gizmodo.com/rai-rai-rai-is-a-pastiche-of-manga-greats-rolled-into-a-cutesy-kaiju-package-2000701470",
+        "published": "Fri, 19 Dec 2025 00:30:07 +0000",
+        "source": "Gizmodo",
+        "summary": "We need you to understand why we need you to join the fight to keep this manga going."
+    },
+    {
+        "id": "https://gizmodo.com/well-duh-chris-evans-is-back-for-avengers-doomsday-2000701608",
+        "title": "Well, Duh, Chris Evans Is Back for \u2018Avengers: Doomsday\u2019",
+        "link": "https://gizmodo.com/well-duh-chris-evans-is-back-for-avengers-doomsday-2000701608",
+        "published": "Thu, 18 Dec 2025 23:33:00 +0000",
+        "source": "Gizmodo",
+        "summary": "The long-rumored return has finally been confirmed, but is he playing Captain America?"
+    },
+    {
+        "id": "https://mashable.com/article/tiktok-signs-us-sale-deal",
+        "title": "TikTok signs deal to sell its U.S. operations after years of uncertainty",
+        "link": "https://mashable.com/article/tiktok-signs-us-sale-deal",
+        "published": "Fri, 19 Dec 2025 00:41:11 +0000",
+        "source": "Mashable",
+        "summary": "TikTok\u2019s long-running saga of a U.S. ban may be coming to an end after the company signed a deal to sell its American operations to a new joint venture."
+    },
+    {
+        "id": "https://mashable.com/article/tiktok-awards-2025-how-to-watch",
+        "title": "TikTok Awards 2025: How to watch",
+        "link": "https://mashable.com/article/tiktok-awards-2025-how-to-watch",
+        "published": "Fri, 19 Dec 2025 00:39:46 +0000",
+        "source": "Mashable",
+        "summary": "It should not prove difficult to watch the TikTok Awards. All you need is the TikTok app and/or a free Tubi account."
+    },
+    {
+        "id": "https://mashable.com/article/how-to-watch-now-you-see-me",
+        "title": "How to watch the Now You See Me franchise at home: The newest movie is now streaming",
+        "link": "https://mashable.com/article/how-to-watch-now-you-see-me",
+        "published": "Fri, 19 Dec 2025 00:28:20 +0000",
+        "source": "Mashable",
+        "summary": "Find out how to watch 'Now You See Me,' 'Now You See Me 2,' and 'Now You See Me: Now You Don't' online \u2014 including where each movie is streaming."
+    },
+    {
+        "id": "https://mashable.com/live/tiktok-awards-2025-live-updates-winners",
+        "title": "TikTok Awards 2025: Live updates from the red carpet and beyond",
+        "link": "https://mashable.com/live/tiktok-awards-2025-live-updates-winners",
+        "published": "Fri, 19 Dec 2025 00:10:26 +0000",
+        "source": "Mashable",
+        "summary": "Creators take center stage as TikTok turns its For You Page into a live awards show \u2014 follow along for real-time updates all night."
+    },
+    {
+        "id": "https://mashable.com/article/dec-18-microsoft-windows-11-home-deal",
+        "title": "Give your old PC new lease on life for just $10",
+        "link": "https://mashable.com/article/dec-18-microsoft-windows-11-home-deal",
+        "published": "Thu, 18 Dec 2025 23:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Give a PC an affordable upgrade with this Microsoft Windows 11 Home license, now just $9.97 (reg. $139)."
+    },
+    {
+        "id": "https://www.zdnet.com/article/iphone-17-upgrade-review/",
+        "title": "I broke my iPhone upgrade rule for the first time, and it turned out to be a blessing",
+        "link": "https://www.zdnet.com/article/iphone-17-upgrade-review/",
+        "published": "Fri, 19 Dec 2025 00:30:42 GMT",
+        "source": "Latest news",
+        "summary": "The iPhone 17 may look just like its predecessor, but it features some of the Pro model's greatest hits, and that's enough to sell me on one."
+    },
+    {
+        "id": "https://www.jeffgeerling.com/blog/2025/15-tb-vram-on-mac-studio-rdma-over-thunderbolt-5",
+        "title": "1.5 TB of VRAM on Mac Studio \u2013 RDMA over Thunderbolt 5",
+        "link": "https://www.jeffgeerling.com/blog/2025/15-tb-vram-on-mac-studio-rdma-over-thunderbolt-5",
+        "published": "Thu, 18 Dec 2025 22:23:09 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46319657\">Comments</a>"
+    },
+    {
+        "id": "https://github.com/DGoettlich/history-llms",
+        "title": "Trained LLMs exclusively on pre-1913 texts",
+        "link": "https://github.com/DGoettlich/history-llms",
+        "published": "Thu, 18 Dec 2025 22:39:47 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46319826\">Comments</a>"
     }
 ]
