📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -21270,5 +21270,61 @@
         "published": "Fri, 19 Dec 2025 01:00:44 GMT",
         "source": "Latest news",
         "summary": "The outdoors can be challenging for portable batteries, but this one by Nitecore is built to withstand the elements."
+    },
+    {
+        "id": "https://mashable.com/article/tiktok-awards-2025-full-winners-list",
+        "title": "TikTok Awards 2025: Full list of winners, updated live",
+        "link": "https://mashable.com/article/tiktok-awards-2025-full-winners-list",
+        "published": "Fri, 19 Dec 2025 03:12:26 +0000",
+        "source": "Mashable",
+        "summary": "See who took home hardware at the inaugural TikTok Awards."
+    },
+    {
+        "id": "https://mashable.com/article/watch-2025-tiktok-awards-live-stream",
+        "title": "TikTok Awards 2025 live: Stream the show now",
+        "link": "https://mashable.com/article/watch-2025-tiktok-awards-live-stream",
+        "published": "Fri, 19 Dec 2025 03:11:54 +0000",
+        "source": "Mashable",
+        "summary": "Time to tune in for the 2025 TikTok Awards."
+    },
+    {
+        "id": "https://mashable.com/article/tiktok-awards-fashion",
+        "title": "TikTok Awards fashion : Sexy, glam, and a little weird",
+        "link": "https://mashable.com/article/tiktok-awards-fashion",
+        "published": "Fri, 19 Dec 2025 03:02:07 +0000",
+        "source": "Mashable",
+        "summary": "TikTok creators donned their best and brightest at the Los Angeles awards show."
+    },
+    {
+        "id": "https://mashable.com/article/nyt-connections-hint-answer-today-december-19-2025",
+        "title": "NYT Connections hints today: Clues, answers for December 19, 2025",
+        "link": "https://mashable.com/article/nyt-connections-hint-answer-today-december-19-2025",
+        "published": "Fri, 19 Dec 2025 03:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Connections is a New York Times word game that's all about finding the \"common threads between words.\" How to solve the puzzle."
+    },
+    {
+        "id": "https://mashable.com/article/strands-nyt-hint-december-19-2025",
+        "title": "NYT Strands hints, answers for December 19, 2025",
+        "link": "https://mashable.com/article/strands-nyt-hint-december-19-2025",
+        "published": "Fri, 19 Dec 2025 03:00:00 +0000",
+        "source": "Mashable",
+        "summary": "The NYT Strands hints and answers you need to make the most of your puzzling experience."
+    },
+    {
+        "id": "https://www.zdnet.com/article/ai-tools-subscriptions-productivity-coding-adobe-cost-break-down/",
+        "title": "Here's every AI subscription I paid for in 2025 - and which ones I'm taking into 2026",
+        "link": "https://www.zdnet.com/article/ai-tools-subscriptions-productivity-coding-adobe-cost-break-down/",
+        "published": "Fri, 19 Dec 2025 03:00:54 GMT",
+        "source": "Latest news",
+        "summary": "Are AI tools worth the money? After reviewing my 2025 spending, I've made one big change."
+    },
+    {
+        "id": "https://www.zdnet.com/article/best-roku-tv-settings-improve-performance/",
+        "title": "I changed 6 settings on my Roku TV to give the system a big performance boost",
+        "link": "https://www.zdnet.com/article/best-roku-tv-settings-improve-performance/",
+        "published": "Fri, 19 Dec 2025 03:00:39 GMT",
+        "source": "Latest news",
+        "summary": "There are several ways to optimize your TV's operating system for faster performance. Here are my go-to changes."
     }
 ]
