📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -21326,5 +21326,21 @@
         "published": "Fri, 19 Dec 2025 03:00:39 GMT",
         "source": "Latest news",
         "summary": "There are several ways to optimize your TV's operating system for faster performance. Here are my go-to changes."
+    },
+    {
+        "id": "https://arstechnica.com/science/2025/12/heres-why-nasa-and-the-space-force-are-interested-in-pizza-shaped-satellites/",
+        "title": "These are the flying discs the government wants you to know about",
+        "link": "https://arstechnica.com/science/2025/12/heres-why-nasa-and-the-space-force-are-interested-in-pizza-shaped-satellites/",
+        "published": "Fri, 19 Dec 2025 03:18:51 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "DiskSat's design offers \"a power-to-weight ratio unmatched by traditional aluminum satellites.\""
+    },
+    {
+        "id": "https://www.zdnet.com/article/best-ai-image-generator/",
+        "title": "The best AI image generators of 2025: I retested the top tools - there's one clear winner",
+        "link": "https://www.zdnet.com/article/best-ai-image-generator/",
+        "published": "Fri, 19 Dec 2025 04:00:00 GMT",
+        "source": "Latest news",
+        "summary": "I tested six popular AI image tools on logos, photos, pop culture prompts, and social media ads. There's one no-contest, total knockout winner."
     }
 ]
