📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -21342,5 +21342,53 @@
         "published": "Fri, 19 Dec 2025 04:00:00 GMT",
         "source": "Latest news",
         "summary": "I tested six popular AI image tools on logos, photos, pop culture prompts, and social media ads. There's one no-contest, total knockout winner."
+    },
+    {
+        "id": "https://www.wired.com/story/dyson-cordless-vacuum-promo-code/",
+        "title": "Save With a 15% Off Dyson Promo Code",
+        "link": "https://www.wired.com/story/dyson-cordless-vacuum-promo-code/",
+        "published": "Fri, 19 Dec 2025 07:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Get 15% off with a Dyson coupon code, plus save up to $600 with discounts on vacuums, $150 off Airwraps, and more."
+    },
+    {
+        "id": "https://mashable.com/article/keith-lee-tiktok-creator-of-the-year-2025-tiktok-awards",
+        "title": "Keith Lee is TikToks Creator of the Year at the 2025 TikTok Awards",
+        "link": "https://mashable.com/article/keith-lee-tiktok-creator-of-the-year-2025-tiktok-awards",
+        "published": "Fri, 19 Dec 2025 05:27:05 +0000",
+        "source": "Mashable",
+        "summary": "Keith Lee took home the highest honors at the first-ever U.S. TikTok awards."
+    },
+    {
+        "id": "https://mashable.com/article/hurdle-hints-answers-december-19-2025",
+        "title": "Hurdle hints and answers for December 19, 2025",
+        "link": "https://mashable.com/article/hurdle-hints-answers-december-19-2025",
+        "published": "Fri, 19 Dec 2025 05:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Hints and answers to today's Hurdle all in one place."
+    },
+    {
+        "id": "https://mashable.com/article/moon-phase-today-dec-19",
+        "title": "Moon phase today: What the moon will look like on December 19",
+        "link": "https://mashable.com/article/moon-phase-today-dec-19",
+        "published": "Fri, 19 Dec 2025 05:00:00 +0000",
+        "source": "Mashable",
+        "summary": "See the moon phase expected for December 19, 2025 as well as when the next full moon is expected."
+    },
+    {
+        "id": "https://ads.apple.com/app-store/help/ad-placements/0082-search-results",
+        "title": "2026 Apple introducing more ads to increase opportunity in search results",
+        "link": "https://ads.apple.com/app-store/help/ad-placements/0082-search-results",
+        "published": "Fri, 19 Dec 2025 05:38:25 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46322556\">Comments</a>"
+    },
+    {
+        "id": "https://lorendb.dev/posts/getting-bitten-by-poor-naming-schemes/",
+        "title": "Getting bitten by Intel's poor naming scenes",
+        "link": "https://lorendb.dev/posts/getting-bitten-by-poor-naming-schemes/",
+        "published": "Fri, 19 Dec 2025 05:35:34 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46322540\">Comments</a>"
     }
 ]
