📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -21390,5 +21390,21 @@
         "published": "Fri, 19 Dec 2025 05:35:34 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46322540\">Comments</a>"
+    },
+    {
+        "id": "https://www.theverge.com/news/847891/a-starlink-satellite-seems-to-have-exploded",
+        "title": "A Starlink satellite seems to have exploded",
+        "link": "https://www.theverge.com/news/847891/a-starlink-satellite-seems-to-have-exploded",
+        "published": "2025-12-19T03:15:30-05:00",
+        "source": "The Verge",
+        "summary": "SpaceX says it has lost control of a Starlink satellite that's now falling back to Earth after suffering an anomaly. The sudden loss of communications, drop in altitude, \"venting of the propulsion tank,\" and \"release of a small number of trackable low relative velocity objects,\" suggests the anomaly was some kind of explosion. SpaceX says [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/ring-promo-code/",
+        "title": "Ring Promo Codes and Discounts: Up to 50% Off",
+        "link": "https://www.wired.com/story/ring-promo-code/",
+        "published": "Fri, 19 Dec 2025 07:10:00 +0000",
+        "source": "WIRED",
+        "summary": "Discover how to save on Ring cameras, doorbells, outdoor cameras, and more."
     }
 ]
